# ESP-IDF-FastLED

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  claude.md  idf_component.yml
.github/workflows/: esp-idf-build.yml
docs/: ESP_IDF_USAGE.md
examples/esp_idf_minimal/: README.md  main.cpp
scripts/: sync_from_upstream.ps1
src/: FastLED.cpp.hpp  led_sysdefs.h
src/fl/: compiler_control.h
src/fl/fixed_point/: s0x32.h  u0x32.h
